# Radeon-hackathon-2026-07

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: governance.yml
Radeon-Cloud-User Guide/: README.md
app/: __init__.py  config.py  main.py
app/agent/: __init__.py  runner.py
app/api/: admin.py  files.py  global_runs.py  health.py  members.py  monitor.py  notifications.py  overview.py  risks.py  runs.py  task_board.py  tasks.py
app/llm/: __init__.py  client.py  health.py
app/observability/: __init__.py  audit.py  error_codes.py
app/rag/: embedder.py  indexer.py  qa_service.py  retriever.py
app/reports/: generator.py
app/schemas/: __init__.py  models.py  phase_h_sql.py
app/security/: auth.py  permissions.py
app/services/: backup.py  cleanup.py  files.py  log_rotation.py  phase_c.py  project_workflow.py  runs.py  (+3 more)
demo/: status.md  tasks.csv
docs/: ADMIN_TECH_LEAD_WORKPLAN.zh-CN.md  UI_API_CONTRACT.md
scripts/: start_api.py  validate_pr_title.py  verify_end_to_end_rag_report_cloud.py  verify_phase_c_cloud.py  verify_stage_e.py
tests/: test_config.py  test_dependency_declaration.py  test_health.py  test_phase_f.py  test_phase_h.py  test_phase_j.py  test_project_report_workflow.py  test_queue_runtime_integration.py  test_rag_retrieval.py  test_remote_model.py  test_runs.py  test_stage_e_cleanup.py  test_stage_e_error_codes.py  test_stage_e_files.py  test_stage_e_lifecycle.py  test_stage_e_runner.py  test_validate_pr_title.py
web/: README.md  index.html  package-lock.json  package.json  vite.config.ts
(+64 files in other folders)
